--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -717,7 +717,7 @@
 # ERT
 
 - type: entity
-  name: Энергетический карабин киборгов
+  name: Энергетический карабин киборга
   parent: BaseWeaponBattery
   id: WeaponPulseCarbineBorg
   description: Энергетический карабин с передовыми технологиями и функцией автоматической перезарядки, предпочитаемый киборгами в оперативном подразделении NT-ERT.
