--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -184,7 +184,7 @@
   id: BorgModuleSyndicate
 
 - type: Tag
-  id: BorgModuleErt
+  id: BorgModuleERT
 
 - type: Tag
   id: BorgModuleSyndicateAssault
